--- a/full-week.html
+++ b/full-week.html
@@ -16,9 +16,9 @@
     href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@700&display=swap"
     rel="stylesheet"
   />
-  <link href="styles/shared.css" rel="stylesheet" />
-
-  <link href="styles/full-week.css" rel="stylesheet" />
+  <link href="./styles/shared.css" rel="stylesheet" />
+  
+  <link href="./styles/full-week.css" rel="stylesheet" />
   <body>
     <header>
       <h1 id="my-upcoming-challenges">MY UPCOMING FULL WEEK CHALLENGES</h1>
