--- a/daily-challenge.html
+++ b/daily-challenge.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@700&family=Oswald:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link href="styles/shared.css" rel="stylesheet" />
-    <link href="styles/daily-challenge.css" rel="stylesheet" />
+    <link href="./styles/shared.css" rel="stylesheet" />
+    <link href="./styles/daily-challenge.css" rel="stylesheet" />
     <title>My daily Challenge</title>
   </head>
   <body>
@@ -26,7 +26,7 @@
         I'll achieve this goal by diving into
         <a href="https://www.google.com">more learning resources</a>.
       </p>
-      <p>Explore the <a href="full-week.html"> full week</a></p>
+      <p>Explore the <a href="./full-week.html"> full week</a></p>
     </footer>
   </body>
 </html>
