--- a/daily-challenge.html
+++ b/daily-challenge.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main>
-      <img src="images/nkem.jpg" alt="Nkem" />
+      <img src="./images/nkem.jpg" alt="Nkem" />
       <h1>Blessing' Challenge for <span>Monday, june 13th</span></h1>
       <p id="todays-challenge">
         learn about the basics of web development - specifically dive into HTML
