--- a/daily-challenge.html
+++ b/daily-challenge.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My daily Challenge</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,7 +13,6 @@
     />
     <link href="./styles/shared.css" rel="stylesheet" />
     <link href="./styles/daily-challenge.css" rel="stylesheet" />
-    <title>My daily Challenge</title>
   </head>
   <body>
     <main>
@@ -30,3 +32,4 @@
     </footer>
   </body>
 </html>
+
