--- a/full-week.html
+++ b/full-week.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <h1 id="my-upcoming-challenges">MY UPCOMING FULL WEEK CHALLENGES</h1>
-    <a href="./daily-challenge.html">view previous page</a>
+    <a href="./index.html">view previous page</a>
     <p id="description">These are my goals for the next days</p>
   </header>
   <main>
